Feature: Converted Session.getStreamURL() to Session.getStreamURI()