@@ -30,6 +30,8 @@ import org.json.JSONObject;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.time.Duration;
 import java.util.EnumSet;
@@ -186,7 +188,7 @@ public final class Driver extends io.ybrid.api.driver.common.Driver {
     }
 
     @Override
-    public URL getStreamURL() throws MalformedURLException {
+    public URI getStreamURI() throws MalformedURLException, URISyntaxException {
         Server server = session.getServer();
         String path = getMountpoint();
 
@@ -195,7 +197,7 @@ public final class Driver extends io.ybrid.api.driver.common.Driver {
         if (token != null)
             path += "?sessionId=" + token;
 
-        return new URL(server.getProtocol(), hostname, server.getPort(), path);
+        return new URI(server.getProtocol(), null, hostname, server.getPort(), path, "sessionId=" + token, null);
     }
 
     @Override
